<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">教务助手</string>

    <string name="navigation_news">首页</string>
    <string name="navigation_book">图书系统</string>
    <string name="navigation_educational">教务系统</string>
    <string name="navigation_me">个人中心</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_quit">退出</string>
    <string name="navigation_about">关于</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="news">要闻</string>
    <string name="notice">公告</string>
    <string name="image">美景</string>
    <string name="tips">攻略</string>

    <string name="error_text">出错啦~请稍后重试！</string>
    <string name="empty_text">抱歉，暂无数据</string>
    <string name="NoNetworkText">无网络连接,请检查您的网络</string>
    <string name="OnReload">点我重试哦</string>
    <string name="Loading">加载中...</string>
    <string name="please_wait">请稍后...</string>

    <string name="alldata">已加载全部数据</string>


    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>

    <string name="school_route">学校路线</string>
    <string name="new_look">新生必看</string>
    <string name="hotspot_issues">热点问题</string>
    <string name="admission_procedure">入学手续</string>

    <string name="takePhoto_upload">拍照上传</string>
    <string name="share">分享</string>

    <string name="split">/@@</string>

    <!--登录注册相关-->
    <string name="fragment_login">fragment_login</string>
    <string name="fragment_signUp_one">fragment_signUp_one</string>
    <string name="fragment_signUp_two">fragment_signUp_two</string>
    <string name="fragment_signUp_three">fragment_signUp_three</string>
    <string name="type">type</string>
    <string name="type_login">login</string>
    <string name="type_sign_up">sign_up</string>
    <string name="login">登录</string>
    <string name="login_now">正在登录...</string>
    <string name="signUp">注册</string>
    <string name="signUp_now">正在注册...</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_length">密码长度为6-16个字符</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_right_phone">请输入正确的手机号</string>
    <string name="phone_has_register">该手机号已被注册</string>
    <string name="next_step">下一步</string>
    <string name="request_code">正在获取验证码...</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="repost_code">点我重新发送</string>
    <string name="can_repost_code">后可重发</string>
    <string name="input_name">请输入昵称</string>
    <string name="input_name_length">昵称长度为4-16个字符</string>
    <string name="login_success">登录成功</string>
    <string name="pwd_error">密码错误</string>
    <string name="login_fail">登录失败,请稍后重试</string>
    <string name="request_error">请求出错,请稍后重试</string>
    <string name="user_exist">该用户已存在</string>
    <string name="user_notexist">该用户不存在</string>
    <string name="creat_account">创建账号</string>
    <string name="service_error">服务器出错,请稍后重试</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="points">提示</string>
    <string name="give_up_sign_up_points">您将放弃注册,是否确认?</string>

    <!-- 设置相关-->
    <string name="title_activity_setting">设置</string>
    <string name="title_base_setting">基本设置</string>
    <string name="key_net_mode">key_net_mode</string>
    <string name="summary_net_on">仅在Wi-Fi环境下才自动加载图片</string>
    <string name="summary_net_off">当前有网络就会加载图片</string>
    <string name="title_net_mode">省流量模式</string>
    <string name="key_update_mode">key_update_mode</string>
    <string name="summary_update_on">已开启软件自动更新</string>
    <string name="summary_update_off">已关闭软件自动更新</string>
    <string name="title_update_mode">自动更新</string>
    <string name="key_check_update">key_check_update</string>
    <string name="title_check_update">检查更新</string>
    <string name="summary_check_update">点击立即检查更新</string>
    <string name="key_notice_mode">key_notice_mode</string>
    <string name="notice_setting">消息设置</string>
    <string name="summary_notice_on">将接收到来自应用和其他用户的消息通知</string>
    <string name="summary_notice_off">已关闭接收推送消息</string>
    <string name="title_notice_mode">推送消息</string>
    <string name="key_clear_cache">key_clear_cache</string>
    <string name="summary_clear_cache">点击删除已缓存的文章内容及图片</string>
    <string name="title_clear_cache">清空缓存</string>
    <string name="title_manage_cache">缓存管理</string>
    <string name="clear_cache_accept">已清理缓存</string>

    <string name="key_feed_back">key_feed_back</string>
    <string name="key_help">key_help</string>
    <string name="key_about">key_about</string>
    <string name="key_agreement">key_agreement</string>
    <string name="key_open_source_license">key_open_source_license</string>
    <string name="title_about_help">关于与帮助</string>
    <string name="title_feed_back">意见反馈</string>
    <string name="title_help">帮助</string>
    <string name="title_agreement">使用协议</string>
    <!--关于-->
    <string name="title_about">关于</string>
    <string name="app_summary">教务助手-师生的沟通桥梁</string>
    <string name="summary_help">应用简介</string>
    <string name="app_info">「教务助手」- 旨在让学生和教师快速了解校园动态。\n此款应用是开源的，如果你觉得「她」是个值得推荐的应用，请介绍给你的朋友们扫描上方的二维码下载吧\n如果你想参与到开发中，请参考下方的项目地址\n你的支持将是我最大的动力与褒奖！</string>
    <string name="special_thanks">特别感谢</string>
    <string name="special_thanks_info">沈阳工业大学辽阳校区</string>
    <string name="about_author">关于作者</string>
    <string name="author_name">ProdigalWang</string>
    <string name="author_info">Android开发者</string>
    <string name="blog">Blog: </string>
    <string name="blog_url">http://blog.csdn.net/prodigalwang</string>
    <string name="github">GitHub: </string>
    <string name="github_url">https://github.com/ProdigalWang</string>
    <string name="thanks_for_open_source">感谢开源</string>
    <string name="open_source_license">开源许可</string>

    <string name="fragment_tag">fragment_tag</string>
    <string name="fragment_about">fragment_about</string>

    <string name="fragment_me">fragment_me</string>
    <string name="fragment_open_source">fragment_open_source</string>
    <string name="fragment_setting">fragment_setting</string>
    <string name="fragment_edit_me_info">fragment_edit_me_info</string>
    <string name="fragment_write_tips">fragment_write_tips</string>
    <string name="title_me">个人中心</string>
    <string name="fragment_et_login">fragment_et_login</string>
    
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>

</resources>
