<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.widget.MainActivity">
    <group>
        <item
            android:id="@+id/navigation_item_news"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_assessment_white_24dp"
            android:title="@string/navigation_news" />
        <item
            android:id="@+id/navigation_item_book"
            android:checkable="true"
            android:icon="@drawable/ic_image_white_24dp"
            android:title="@string/navigation_book" />
        <item
            android:id="@+id/navigation_item_educational"
            android:checkable="true"
            android:icon="@drawable/ic_date_range_white_24dp"
            android:title="@string/navigation_educational" />


    </group>

    <group android:id="@+id/group_two">
        <item
            android:id="@+id/navigation_item_me"
            android:checkable="true"
            android:icon="@drawable/ic_portrait_white_24dp"
            android:title="@string/navigation_me" />
        <item
            android:id="@+id/navigation_item_about"
            android:checkable="true"
            android:icon="@drawable/ic_about_white_24dp"
            android:title="@string/navigation_about" />

    </group>

    <group android:id="@+id/group_three">
        <item
            android:id="@+id/navigation_item_set"
            android:checkable="true"
            android:icon="@drawable/ic_set_white"
            android:title="@string/navigation_setting" />

        <item
            android:id="@+id/navigation_item_quit"
            android:checkable="true"
            android:icon="@drawable/ic_undo_white_24dp"
            android:title="@string/navigation_quit" />
    </group>

</menu>