<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/ic_about_header"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_app_dowland" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10dp"
            android:layout_marginTop="@dimen/dp_8dp"
            android:gravity="center"
            android:text="@string/app_summary"
            android:textColor="@color/icons"
            android:textSize="@dimen/sn_18sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8dp"
            android:textColor="@color/icons"
            android:textSize="@dimen/sn_14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_help"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sn_16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/app_info"
                android:textColor="@color/secondary_text"
                android:textIsSelectable="true"
                android:textSize="@dimen/sn_14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="@color/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/special_thanks"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sn_16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/special_thanks_info"
                android:textColor="@color/secondary_text"
                android:textIsSelectable="true"
                android:textSize="@dimen/sn_14sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="@color/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/about_author"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sn_16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_author"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_author_image" />

            <TextView
                android:id="@+id/tv_tangqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_author"
                android:layout_marginLeft="@dimen/dp_8dp"
                android:layout_toEndOf="@id/iv_author"
                android:layout_toRightOf="@id/iv_author"
                android:text="@string/author_name"
                android:textColor="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tangqi"
                android:layout_marginLeft="@dimen/dp_8dp"
                android:layout_toEndOf="@id/iv_author"
                android:layout_toRightOf="@id/iv_author"
                android:text="@string/author_info"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tv_avator_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/iv_author"
                android:layout_below="@id/iv_author"
                android:layout_marginTop="@dimen/dp_8dp"
                android:text="@string/blog"
                android:textColor="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_avator_blog"
                android:layout_toRightOf="@id/tv_avator_blog"
                android:autoLink="web"
                android:text="@string/blog_url"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tv_avator_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_avator_blog"
                android:layout_below="@id/tv_avator_blog"
                android:text="@string/github"
                android:textColor="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_avator_github"
                android:layout_toRightOf="@id/tv_avator_github"
                android:autoLink="web"
                android:text="@string/github_url"
                android:textColor="@color/secondary_text" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="12dp"
            android:background="@color/divider" />
    </LinearLayout>
</LinearLayout>

